--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --index-url https://download.pytorch.org/whl/cu118
-torch==2.1.0
-torchvision==0.16.0
+torch==2.1.0 #2.6.0 for MacOS MPS
+torchvision==0.16.0 #0.21.0 for MacOS MPS
 matplotlib==3.10.1
 tqdm == 4.67.1
 numpy==1.26.4
