--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /input
 /models
+/YongLiangExperimentations/UncleanDataset/utils/__pycache__
+/YongLiangExperimentations/results
+/YongLiangExperimentations/models
+/YongLiangExperimentations/logs
