ReadME and Requirements

--- a/requirementsNoCuda.txt
+++ b/requirementsNoCuda.txt
@@ -1,7 +1,12 @@
 torch==2.1.0
 torchvision==0.16.0
-matplotlib==3.10.1
-tqdm==4.67.1
-numpy==1.26.4
-gdown
+tqdm
+matplotlib
+seaborn
+scikit-learn
+numpy
+ray[tune]
+optuna
+ultralytics
 notebook
+gdown
