--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-torch==2.1.0+cu121
-torchvision==0.16.0+cu121
 tqdm==4.67.1
 matplotlib==3.10.1
 seaborn==0.13.2
@@ -12,3 +10,7 @@ gdown==5.2.0
 timm==1.0.15
 notebook
 gdown
+--index-url https://download.pytorch.org/whl/cu118
+torch==2.1.0+cu118
+torchvision==0.16.0+cu118
+torchaudio==2.1.0+cu118
